--- a/style.css
+++ b/style.css
@@ -7,42 +7,47 @@ Author: MDBootstrap.com
 Author URI: https://mdbootstrap.com
 */
 
-.page-footer {
-  background-color: #114A7C; }
-
-.blue-gradient {
-  background: -webkit-linear-gradient(50deg, #45cafc, #303f9f) !important;
-  background: -o-linear-gradient(50deg, #45cafc, #303f9f) !important;
-  background: linear-gradient(40deg, #45cafc, #303f9f) !important; }
-
-.card-comments img {
-  width: 4rem; }
-
-.card-intro {
-  margin-top: 67px; }
-  .card-intro .card-body {
-    -webkit-border-radius: 0 !important;
-    border-radius: 0 !important; }
-
-.navbar-brand img {
-  height: 20px; }
-
-.pagination .page-item.active .page-link {
-  background-color: #09c; }
-
-.card-avatar img {
-  width: 100px; }
-
-
 
 /**********************COMMONS HERE*************************/
+
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+body {
+  font-family: "roboto", serif;
+}
+
+html {
+  height: 100%;
+}
+
+.z-depth-1, .chip:active {
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.08), 0 2px 10px 0 rgba(0, 0, 0, 0.06) !important;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.08), 0 2px 10px 0 rgba(0, 0, 0, 0.06) !important;
+}
 
 .box-center {
   max-width: 1440px !important;
   margin: auto !important;
 }
+
 .container-box {
   margin-right: 2rem;
   margin-left: 2rem;
   background-color:white;
+}
+
+.background-none {
+  background: none;
+}
+
+.dropdown-item:hover {
+  background: #f9f8f6 !important;
+  color: #000 !important;
+  box-shadow: none;
+}
+
+.navbar .dropdown .dropdown-menu .dropdown-item:hover {
+  background: #f9f8f6 !important;
+  color: #000 !important;
+  box-shadow: none;
 }
